apps/hugo/griz/deployment-tech.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-tech
  namespace: griz
  labels:
    app: nginx-tech
    service: s1
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: nginx-tech
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-tech
  namespace: griz
  labels:
    app: nginx-tech
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-tech
      version: v1
  template:
    metadata:
      labels:
        app: nginx-tech
        version: v1
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
          - name: nas-volume
            mountPath: /usr/share/nginx/html
            subPath: ""
      volumes:
        - name: nas-volume
          persistentVolumeClaim:
            claimName: tech-pvc
