apps/hugo/griz/vs-tech.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: techgriz
  namespace: griz
spec:
  hosts:
    - tech.griz.sh
  gateways:
    - griz-gateway
  http:
    - route:
        - destination:
            host: nginx-svc-tech.griz.svc.cluster.local
